tests/mysite-localhost-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysite.localhost
  namespace: erpnext
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: erpnext-upstream
            port:
              number: 8080
    host: mysite.localhost
