tests/prsite-localhost-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prsite.localhost
  namespace: erpnext
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: erpnext-pr
            port:
              number: 8080
    host: prsite.localhost
